[project]
name = "atri-indextts"
version = "0.1.0"
description = "统一管理IndexTTS服务工具"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.2",
    "openai>=2.44.0",
    "requests>=2.34.2",
]

[project.scripts]
indextts = "atri_indextts.cli:main"

[tool.uv]
package = true

[tool.setuptools.package-data]
"atri_indextts" = ["*.json"]
