[project]
name = "atri-indextts"
version = "1.2.0"
description = "统一管理IndexTTS服务工具"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.2",
    "openai>=2.44.0",
    "requests>=2.34.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
]

[project.scripts]
indextts = "atri_indextts.cli:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.package-data]
"atri_indextts" = ["*.json"]
